--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "wolcen_i18n_fr",
   "version": "1.0.15.0",
-  "description": "",
-  "main": "app.js",
+  "description": "Util scripts to work with wolcen localization files",
+  "main": "wolcen.js",
   "scripts": {
-    "start": "node app.js",
-    "build": "7z a ./dist/french_xml.zip ./xml/* && mv ./dist/french_xml.zip ./dist/french_xml.pak"
+    "extract": "node wolcen.js extract",
+    "pack": "node wolcen.js pack"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "0r31",
+  "license": "MIT",
   "dependencies": {
+    "adm-zip": "^0.4.16",
     "xml2js": "^0.4.23"
   }
 }
